finish things up

--- a/server/www/index.html
+++ b/server/www/index.html
@@ -3,6 +3,8 @@
 <html lang="en">
 <head>
 <title>Title</title>
+
+<link rel="stylesheet" href="main.css">
 <script src="client.js"></script>
 </head>
 
