--- a/server/www/index.html
+++ b/server/www/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 <head>
-<title>Title</title>
+<title>elmchat.xyz</title>
 
 <link rel="stylesheet" href="main.css">
 <script src="client.js"></script>
